--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "prueba",
+  "name": "chatbot-devlmer",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 7847",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 7847",
     "lint": "eslint"
   },
   "dependencies": {
